--- a/internal/templates/Template1.html
+++ b/internal/templates/Template1.html
@@ -9,22 +9,22 @@
       rel="stylesheet">
     <style>
       @page {
-  			size: A4;
+  			size: auto;
         margin: 0mm;
 			}
       
       body 
       {
-				background-image: url('temp-images/Template1Image.jpg');
-        background-size: 100% 100%;
-        
+				background-image: url('internal-images/Template1Image.jpg');
+        background-size: auto 110%;
+       
         font-family: 'IBM Plex Sans', sans-serif;
     		color: #FFFFFF;
         
-        margin-top: 20px;
-  			margin-bottom: 40px;
-  			margin-right: 40px;
-  			margin-left: 40px;
+				margin-top: 40px;
+        margin-bottom: 40px;
+        margin-right: 40px;
+        margin-left: 40px;
       }
       
       div#first-title
@@ -107,18 +107,16 @@
     <div class="container">
       <div class="split-box">
         <div class="split-box-row">
-          <div class="box-cell box1"> <img src="images/:FullName1:WordCloud.png"
-              alt=":Name1: WordCloud" style="width: 100%; height: auto;">
-            :Name1:'s Most Used Words</div>
-          <div class="box-cell box2"> <img src="images/:FullName2:WordCloud.png"
-              alt=":Name2: WordCloud" style="width: 100%; height: auto;">
-            :Name2:'s Most Used Words </div>
+          <div class="box-cell box1"> <img src=":FullName1:WordCloud.png" alt=":Name1: WordCloud"
+              style="width: 100%; height: auto;"> :Name1:'s Most Used Words</div>
+          <div class="box-cell box2"> <img src=":FullName2:WordCloud.png" alt=":Name2: WordCloud"
+              style="width: 100%; height: auto;"> :Name2:'s Most Used Words </div>
         </div>
       </div>
     </div>
     <div class="divider div-transparent"></div>
     <div class="container">
-      <div class="frequency-box"> <img src="images/TextFrequency.png" alt="TextFrequency"
+      <div class="frequency-box"> <img src="TextFrequency.png" alt="TextFrequency"
           style="width: 100%; height: auto; display:block;"><br>
         Proportion of Messages Per Time of Day </div>
     </div>
@@ -126,13 +124,13 @@
     <div class="container">
       <div class="split-box">
         <div class="split-box-row">
-          <div class="bottom-cell box1"> <img src="images/SentimentProportions.png"
-              alt="SentimentProportions" style="width: 100%; height: auto;"><br>
+          <div class="bottom-cell box1"> <img src="SentimentProportions.png" alt="SentimentProportions"
+              style="width: 100%; height: auto;"><br>
             Message Sentiment</div>
-          <div class="bottom-cell box2"> <img src="images/WordFrequency.png" alt="WordFrequency"
+          <div class="bottom-cell box2"> <img src="WordFrequency.png" alt="WordFrequency"
               style="width: 100%; height: auto;"><br>
             Favourite Words By Person</div>
-          <div class="bottom-cell box3"> <img src="images/EmojiWordCloud.png" alt="EmojiWordCloud"
+          <div class="bottom-cell box3"> <img src="EmojiWordCloud.png" alt="EmojiWordCloud"
               style="width: 75%; height: auto;"><br>
             Commonly Used Emojis</div>
         </div>
