--- a/internal/templates/Template2.html
+++ b/internal/templates/Template2.html
@@ -163,7 +163,7 @@
     </div>
     <div class="divider div-transparent"></div>
     <div class="container">
-      <div class="frequency-box"> <img src="TextFrequency.png" alt="TextFrequency"
+      <div class="frequency-box"> <img src="HourlyAverageTextFrequency.png" alt="TextFrequency"
           style="width: 80%; height: auto; text-align: center;"><br>
         <br>
         Number of Messages Per Time of Day </div>
